--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,16 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "*.tpp": "cpp",
+        "list": "cpp",
+        "stack": "cpp",
+        "map": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "condition_variable": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
